# sdlc-assessor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PLANS.md  pyproject.toml  sdlc
.github/workflows/: release.yml
docs/: ACTION_PLAN.md  ANALYSIS.md  HANDOFF.md  README.md  RENAME_CHECKLIST.md  SDLC_Framework_v2_Spec.md  calibration_targets.md  detector_pack_starter_spec.md  evidence_schema.json  remediation_planner_spec.md  renderer_template.md  repo_type_profiles.json  scoring_engine_spec.md  use_case_profiles.json
docs/frameworks/: cwe_cvss.md  dora.md  rsf_v1.0.md
scripts/: benchmark_calibration.py  calibration_check.py
sdlc_assessor/: __init__.py  cli.py
sdlc_assessor/classifier/: engine.py
sdlc_assessor/collector/: dependencies.py  engine.py
sdlc_assessor/core/: enums.py  io.py  models.py  schema.py
sdlc_assessor/detectors/: common.py  dependency_hygiene.py  git_history.py  python_pack.py  registry.py  tsjs_pack.py
sdlc_assessor/detectors/sast/: __init__.py  cargo_audit_adapter.py
sdlc_assessor/detectors/treesitter/: csharp_pack.py  framework.py  go_pack.py  java_pack.py  kotlin_pack.py  rust_pack.py  tsjs_pack.py
sdlc_assessor/detectors/treesitter/rules/: csharp_rules.py  go_rules.py  java_rules.py  kotlin_rules.py  rust_rules.py  tsjs_rules.py
sdlc_assessor/normalizer/: findings.py
sdlc_assessor/profiles/: loader.py  packs.py
sdlc_assessor/profiles/data/: maturity_profiles.json
sdlc_assessor/remediation/: __init__.py  markdown.py  planner.py
sdlc_assessor/renderer/: deliverable_html.py  html.py  markdown.py  narrative_blocks.py  persona.py
sdlc_assessor/renderer/charts/: __init__.py  _palette.py  gauge.py  matrix.py  radar.py  trajectory.py
sdlc_assessor/renderer/deliverables/: __init__.py  _citations.py  _decomposition.py  _exec_summary.py  _gap.py  _integrate.py  _methodology.py  _persona_translations.py  _provenance.py  _vocab.py  acquisition.py  base.py  engineering.py  remediation.py  vc.py
sdlc_assessor/rsf/: __init__.py  aggregate.py  criteria.py  personas.py  score.py  scorers.py
sdlc_assessor/scorer/: __init__.py  blockers.py  engine.py  llm_narrator.py  policy.py  precedence.py
tests/fixtures/fixture_committed_credential/: README.md  id_rsa
tests/fixtures/fixture_csharp_basic/: Calculator.cs  README.md
tests/fixtures/fixture_csharp_unsafe/: Bad.cs  README.md
tests/fixtures/fixture_go_basic/: README.md  go.mod  main.go
tests/fixtures/fixture_go_panics/: README.md  go.mod  main.go
tests/fixtures/fixture_infrastructure_archetype/: README.md  main.tf
tests/fixtures/fixture_internal_tool_archetype/: main.py  pyproject.toml
tests/fixtures/fixture_java_basic/: Calculator.java  README.md
tests/fixtures/fixture_java_unsafe/: Bad.java  README.md
tests/fixtures/fixture_javascript_basic/: README.md  index.js  package.json
tests/fixtures/fixture_kotlin_basic/: Calculator.kt  README.md
tests/fixtures/fixture_kotlin_unsafe/: Bad.kt  README.md
tests/fixtures/fixture_library_archetype/: README.md  pyproject.toml
tests/fixtures/fixture_library_archetype/src/library_fixture/: __init__.py
tests/fixtures/fixture_monorepo_archetype/: README.md
tests/fixtures/fixture_no_ci/: README.md  pyproject.toml
tests/fixtures/fixture_no_ci/src/: main.py
tests/fixtures/fixture_probable_secret/: main.py
tests/fixtures/fixture_python_basic/: README.md
tests/fixtures/fixture_research_repo/: README.md  analysis.ipynb
tests/fixtures/fixture_rust_basic/: Cargo.toml  README.md  lib.rs
tests/fixtures/fixture_rust_unsafe/: Cargo.toml  README.md  lib.rs
tests/fixtures/fixture_rust_with_lockfile/: Cargo.toml  README.md  lib.rs
tests/fixtures/fixture_service_archetype/: Dockerfile  README.md
tests/fixtures/fixture_service_archetype/app/: main.py
tests/fixtures/fixture_tsx_only/: App.tsx  README.md  tsconfig.json
tests/fixtures/fixture_typescript_basic/: README.md  index.ts
tests/fixtures/fixture_vendored_node_modules/: README.md  package.json
tests/golden/: test_report_render.py
tests/unit/: test_charts.py  test_citations.py  test_classifier.py  test_collector_evidence.py  test_core_schema.py  test_decomposition.py  test_deliverable_depth.py  test_dependencies.py  test_detectors.py  test_git_history.py  test_html_renderer.py  test_llm_narrator.py  test_methodology.py  test_persona.py  test_persona_translation.py  test_phase8_policy.py  test_profile_packs.py  test_profiles_loader.py  test_remediation.py  test_rsf_framework.py  test_rsf_scorers.py  test_sast.py  test_scorer_blockers.py  test_version_sync.py
