[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc-assessor"
version = "0.1.0"
description = "CLI-first SDLC repository assessment framework"
requires-python = ">=3.12"

[project.scripts]
sdlc = "sdlc_assessor.cli:main"

[tool.setuptools.package-data]
"sdlc_assessor.core" = ["evidence_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
